Fix T55517: Property-split fails w/ expanded enum